# OpenCL_image_transform

./: CMakeLists.txt  README.md
libs/OpenCL/common/lib/x64/: OpenCL.lib
src/: main.cpp
